[workspace]
resolver = "3"
members = ["testrs", "testrs-macros", "testrs-cli", "testrs-example"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/conradludgate/testrs"

[workspace.dependencies]
testrs-macros = { path = "testrs-macros", version = "0.1.0" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Noisy for an internal CLI / cohesive codegen functions.
must_use_candidate = "allow"
too_many_lines = "allow"
