[package]
name = "testrs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code generator for testrs: resolves fixtures by type and generates the kitest harness."

[[bin]]
name = "testrs"
path = "src/main.rs"

[dependencies]
# rustdoc-reflection is git-only (not published to crates.io).
rustdoc_ir = { git = "https://github.com/LukeMathWalker/rustdoc-reflection" }
rustdoc_resolver = { git = "https://github.com/LukeMathWalker/rustdoc-reflection" }
rustdoc_processor = { git = "https://github.com/LukeMathWalker/rustdoc-reflection" }
# Pinned so PackageGraph / Item types unify with rustdoc_processor.
guppy = "=0.17.26"
rustdoc-types = "=0.57.3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2"
termtree = "0.5"

[lints]
workspace = true
