[package]
name = "testrs-example"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
testrs = { path = "../testrs" }
# Used by the crate's `#[testrs::runtime]` async bridge (see `async_runtime`).
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[lints]
workspace = true
