[package]
name = "testrs-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc-macro markers for testrs: #[fixture] and #[test]."

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
unsynn = "0.3.0"

[lints]
workspace = true
