[package]
name = "testrs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A pytest-like test framework with compile-time, type-based fixture dependency injection."

[dependencies]
testrs-macros.workspace = true
lexopt = "0.3"
pollster = "0.4"
# Only used by the generated harness (see the `harness` feature); kept optional so
# crates that merely depend on `testrs` don't pull in the test runner.
kitest = { version = "0.5", optional = true }

[features]
# Runtime support consumed by the CLI-generated harness, not the crate under test.
harness = ["dep:kitest"]

[lints]
workspace = true
